Several improvements of Windows Controller plus CustomSysout with Log4J.